@@ -23,13 +23,13 @@
  * THE SOFTWARE.                                                                 *
  *                                                                               *
  ********************************************************************************/
-package org.aoju.bus.gitlab;
+package org.aoju.bus.gitlab.support;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonValue;
-import org.aoju.bus.core.lang.Charset;
-import org.aoju.bus.core.lang.Normal;
-import org.aoju.bus.core.lang.Symbol;
+import org.aoju.bus.core.lang.Header;
+import org.aoju.bus.core.lang.MediaType;
+import org.aoju.bus.gitlab.GitLabApiException;
 
 import java.io.BufferedReader;
 import java.io.IOException;
@@ -51,14 +51,10 @@ import java.util.regex.Pattern;
  *
  * <p>NOTE: This relies on HTML scraping and has been tested on GitLab-CE 11.0.0 to 11.10.1 for
  * proper functionality.  It may not work on earlier or later versions.</p>
- *
- * @author Kimi Liu
- * @version 6.2.8
- * @since JDK 1.8+
  */
 public final class AccessToken {
 
-    protected static final String USER_AGENT = "GitLab Client";
+    protected static final String USER_AGENT = "GitLab4J Client";
     protected static final String COOKIES_HEADER = "Set-Cookie";
     protected static final String NEW_USER_AUTHENTICITY_TOKEN_REGEX = "\"new_user\".*name=\\\"authenticity_token\\\"\\svalue=\\\"([^\\\"]*)\\\".*new_new_user";
     protected static final Pattern NEW_USER_AUTHENTICITY_TOKEN_PATTERN = Pattern.compile(NEW_USER_AUTHENTICITY_TOKEN_REGEX);
@@ -131,8 +127,8 @@ public final class AccessToken {
             String urlString = baseUrl + "/profile/personal_access_tokens";
             URL url = new URL(urlString);
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestProperty("User-Agent", USER_AGENT);
-            connection.setRequestProperty("Cookie", cookies);
+            connection.setRequestProperty(Header.USER_AGENT, USER_AGENT);
+            connection.setRequestProperty(Header.COOKIE, cookies);
             connection.setReadTimeout(10000);
             connection.setConnectTimeout(10000);
 
@@ -155,10 +151,10 @@ public final class AccessToken {
              * create a new personal access token.                                         *
              *******************************************************************************/
             connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestProperty("User-Agent", USER_AGENT);
-            connection.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
-            connection.setRequestProperty("Charset", Charset.DEFAULT_UTF_8);
-            connection.setRequestProperty("Cookie", cookies);
+            connection.setRequestProperty(Header.USER_AGENT, USER_AGENT);
+            connection.setRequestProperty(Header.CONTENT_TYPE, MediaType.APPLICATION_FORM_URLENCODED);
+            connection.setRequestProperty("Charset", "utf-8");
+            connection.setRequestProperty(Header.COOKIE, cookies);
             connection.setReadTimeout(10000);
             connection.setConnectTimeout(10000);
             connection.setRequestMethod("POST");
@@ -168,9 +164,9 @@ public final class AccessToken {
             StringBuilder formData = new StringBuilder();
             addFormData(formData, "authenticity_token", csrfToken);
             addFormData(formData, "personal_access_token[name]", tokenName);
-            addFormData(formData, "personal_access_token[expires_at]", Normal.EMPTY);
+            addFormData(formData, "personal_access_token[expires_at]", "");
 
-            if (null != scopes && scopes.size() > 0) {
+            if (scopes != null && scopes.size() > 0) {
                 for (Scope scope : scopes) {
                     addFormData(formData, "personal_access_token[scopes][]", scope.toString());
                 }
@@ -189,11 +185,11 @@ public final class AccessToken {
             }
 
             // Follow the redirect with the provided session cookie
-            String redirectUrl = connection.getHeaderField("Location");
+            String redirectUrl = connection.getHeaderField(Header.LOCATION);
             url = new URL(redirectUrl);
             connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestProperty("User-Agent", USER_AGENT);
-            connection.setRequestProperty("Cookie", cookies);
+            connection.setRequestProperty(Header.USER_AGENT, USER_AGENT);
+            connection.setRequestProperty(Header.COOKIE, cookies);
             connection.setReadTimeout(10000);
             connection.setConnectTimeout(10000);
 
@@ -217,7 +213,7 @@ public final class AccessToken {
             throw new GitLabApiException(ioe);
         } finally {
 
-            if (null != cookies) {
+            if (cookies != null) {
                 try {
                     logout(baseUrl, cookies);
                 } catch (Exception ignore) {
@@ -286,8 +282,8 @@ public final class AccessToken {
             String urlString = baseUrl + "/profile/personal_access_tokens";
             URL url = new URL(urlString);
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestProperty("User-Agent", USER_AGENT);
-            connection.setRequestProperty("Cookie", cookies);
+            connection.setRequestProperty(Header.USER_AGENT, USER_AGENT);
+            connection.setRequestProperty(Header.COOKIE, cookies);
             connection.setReadTimeout(10000);
             connection.setConnectTimeout(10000);
 
@@ -321,8 +317,8 @@ public final class AccessToken {
             }
 
             content = content.substring(0, indexOfLinkEnd);
-            String scopesText = Normal.EMPTY;
-            if (null != scopes && scopes.size() > 0) {
+            String scopesText = "";
+            if (scopes != null && scopes.size() > 0) {
                 final StringJoiner joiner = new StringJoiner(", ");
                 scopes.forEach(s -> joiner.add(s.toString()));
                 scopesText = joiner.toString();
@@ -340,10 +336,10 @@ public final class AccessToken {
             String revokePath = matcher.group(1);
             url = new URL(baseUrl + revokePath);
             connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestProperty("User-Agent", USER_AGENT);
-            connection.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
-            connection.setRequestProperty("Charset", Charset.DEFAULT_UTF_8);
-            connection.setRequestProperty("Cookie", cookies);
+            connection.setRequestProperty(Header.USER_AGENT, USER_AGENT);
+            connection.setRequestProperty(Header.CONTENT_TYPE, MediaType.APPLICATION_FORM_URLENCODED);
+            connection.setRequestProperty("Charset", "utf-8");
+            connection.setRequestProperty(Header.COOKIE, cookies);
             connection.setReadTimeout(10000);
             connection.setConnectTimeout(10000);
             connection.setRequestMethod("PUT");
@@ -366,11 +362,11 @@ public final class AccessToken {
             }
 
             // Follow the redirect with the provided session cookie
-            String redirectUrl = connection.getHeaderField("Location");
+            String redirectUrl = connection.getHeaderField(Header.LOCATION);
             url = new URL(redirectUrl);
             connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestProperty("User-Agent", USER_AGENT);
-            connection.setRequestProperty("Cookie", cookies);
+            connection.setRequestProperty(Header.USER_AGENT, USER_AGENT);
+            connection.setRequestProperty(Header.COOKIE, cookies);
             connection.setReadTimeout(10000);
             connection.setConnectTimeout(10000);
 
@@ -384,7 +380,7 @@ public final class AccessToken {
             throw new GitLabApiException(ioe);
         } finally {
 
-            if (null != cookies) {
+            if (cookies != null) {
                 try {
                     logout(baseUrl, cookies);
                 } catch (Exception ignore) {
@@ -432,8 +428,8 @@ public final class AccessToken {
             String urlString = baseUrl + "/profile/personal_access_tokens";
             URL url = new URL(urlString);
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestProperty("User-Agent", USER_AGENT);
-            connection.setRequestProperty("Cookie", cookies);
+            connection.setRequestProperty(Header.USER_AGENT, USER_AGENT);
+            connection.setRequestProperty(Header.COOKIE, cookies);
             connection.setReadTimeout(10000);
             connection.setConnectTimeout(10000);
 
@@ -457,7 +453,7 @@ public final class AccessToken {
             throw new GitLabApiException(ioe);
         } finally {
 
-            if (null != cookies) {
+            if (cookies != null) {
                 try {
                     logout(baseUrl, cookies);
                 } catch (Exception ignore) {
@@ -505,8 +501,8 @@ public final class AccessToken {
             String urlString = baseUrl + "/admin/health_check";
             URL url = new URL(urlString);
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestProperty("User-Agent", USER_AGENT);
-            connection.setRequestProperty("Cookie", cookies);
+            connection.setRequestProperty(Header.USER_AGENT, USER_AGENT);
+            connection.setRequestProperty(Header.COOKIE, cookies);
             connection.setReadTimeout(10000);
             connection.setConnectTimeout(10000);
 
@@ -530,7 +526,7 @@ public final class AccessToken {
             throw new GitLabApiException(ioe);
         } finally {
 
-            if (null != cookies) {
+            if (cookies != null) {
                 try {
                     logout(baseUrl, cookies);
                 } catch (Exception ignore) {
@@ -572,7 +568,7 @@ public final class AccessToken {
             URL url = new URL(urlString);
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
-            connection.addRequestProperty("User-Agent", USER_AGENT);
+            connection.addRequestProperty(Header.USER_AGENT, USER_AGENT);
             connection.setReadTimeout(10000);
             connection.setConnectTimeout(10000);
 
@@ -601,11 +597,11 @@ public final class AccessToken {
              * fetching a new session cookie along the way.                                *
              *******************************************************************************/
             connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestProperty("User-Agent", USER_AGENT);
-            connection.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
-            connection.setRequestProperty("Charset", Charset.DEFAULT_UTF_8);
+            connection.setRequestProperty(Header.USER_AGENT, USER_AGENT);
+            connection.setRequestProperty(Header.CONTENT_TYPE, MediaType.APPLICATION_FORM_URLENCODED);
+            connection.setRequestProperty("Charset", "utf-8");
 
-            connection.setRequestProperty("Cookie", cookies);
+            connection.setRequestProperty(Header.COOKIE, cookies);
             connection.setReadTimeout(10000);
             connection.setConnectTimeout(10000);
             connection.setRequestMethod("POST");
@@ -633,11 +629,11 @@ public final class AccessToken {
             cookies = cookieParts[0];
 
             // Follow the redirect with the provided session cookie
-            String redirectUrl = connection.getHeaderField("Location");
+            String redirectUrl = connection.getHeaderField(Header.LOCATION);
             url = new URL(redirectUrl);
             connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestProperty("User-Agent", USER_AGENT);
-            connection.setRequestProperty("Cookie", cookies);
+            connection.setRequestProperty(Header.USER_AGENT, USER_AGENT);
+            connection.setRequestProperty(Header.COOKIE, cookies);
             connection.setReadTimeout(10000);
             connection.setConnectTimeout(10000);
 
@@ -680,8 +676,8 @@ public final class AccessToken {
             String urlString = baseUrl + "/users/sign_out";
             URL url = new URL(urlString);
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestProperty("User-Agent", USER_AGENT);
-            connection.setRequestProperty("Cookie", cookies);
+            connection.setRequestProperty(Header.USER_AGENT, USER_AGENT);
+            connection.setRequestProperty(Header.COOKIE, cookies);
             connection.setRequestMethod("GET");
             connection.setReadTimeout(10000);
             connection.setConnectTimeout(10000);
@@ -720,9 +716,9 @@ public final class AccessToken {
         }
 
         formData.append(name);
-        formData.append(Symbol.EQUAL);
+        formData.append("=");
         try {
-            formData.append(URLEncoder.encode(value, Charset.DEFAULT_UTF_8));
+            formData.append(URLEncoder.encode(value, "UTF-8"));
             return (formData);
         } catch (Exception e) {
             throw new GitLabApiException(e);
